<resources>
    <string name="app_name">WhatsApp</string>

    <!-- Login e cadastro -->
    <string name="Nome">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="bt_cadastro">Cadastrar</string>
    <string name="bt_Logar">Login</string>
    <string name="textV_Cadastre_se">Não tem uma conta? Cadastre-se</string>

    <!-- Principal -->
    <string name="pesquisar">Pesquisar</string>
    <string name="sair">Sair</string>
    <string name="configuracao">Configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Conversas">Conversas</string>
    <string name="Contatos">Contatos</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>

    <string name="nome_do_grupo">Nome do grupo</string>
    <string name="nome_opcional">Defina um nome e uma imagem opcional</string>
    <string name="participantes_0">Participantes: 0</string>


</resources>