<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/image_login_logo"
        android:layout_width="200dp"
        android:layout_height="157dp"
        android:src="@drawable/logo_inicial_tela"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputText_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputText_login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_login_logar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="ValidarAutenticacaoUsuario"
        android:text="@string/bt_Logar"
        android:textAllCaps="false"
        android:textColor="@color/textWhite" />

    <TextView
        android:id="@+id/textV_login_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirTelaCadastro"
        android:paddingTop="16dp"
        android:text="@string/textV_Cadastre_se"
        android:textColor="@color/textWhite" />

</LinearLayout>