<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".Activity.CadastroActivity">

    <ImageView
        android:id="@+id/image_cadastro_icone"
        android:layout_width="200dp"
        android:layout_height="157dp"
        android:src="@drawable/logo_cadastro" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputT_cadastro_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nome"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputT_cadastro_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputT_cadastro_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_cadastro_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="validarCadastroUsuario"
        android:text="@string/bt_cadastro"
        android:textAllCaps="false"
        android:textColor="@color/textWhite" />


</LinearLayout>